[package]
name = "siaki"
version = "0.1.0"
authors = ["José F. Rives <jose@digio.es>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.10"
actix-web = "3"
actix-codec = "0.3"
actix-web-actors = "3"
json = "0.12.4"